Création du modèle pour la table composants
-Création de la classe componenttablemodel
-Ajout dans mainwindow d'un code pour le tester
-ajout de la fonction d'ouverture de base de de donnée

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,7 +32,7 @@
        <enum>QTabWidget::TabShape::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -753,7 +753,7 @@
            <enum>QTabWidget::TabPosition::West</enum>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Tab_comp_edit">
            <attribute name="title">
@@ -761,20 +761,7 @@
            </attribute>
            <layout class="QGridLayout" name="gridLayout_10">
             <item row="0" column="0">
-             <widget class="SQLTableForm" name="editComponentsSqlTableWidget" native="true">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>200</height>
-               </size>
-              </property>
-             </widget>
+             <widget class="QTableView" name="vue_edition_composant"/>
             </item>
            </layout>
           </widget>
