--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,7 +32,7 @@
        <enum>QTabWidget::TabShape::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -68,7 +68,7 @@
                <number>0</number>
               </property>
               <item>
-               <widget class="SQLTableForm" name="dclCompleteSqlTableWidget" native="true">
+               <widget class="FilterTableView" name="dclCompleteSqlTableWidget" native="true">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
                   <horstretch>0</horstretch>
